--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -9,12 +9,25 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+    <form>
+      <input name="text" />
+      <div class="has-error">Error text</div>
+    </form>
+
+  <script src="http://code.jquery.com/jquery.min.js"></script>
   <script src="qunit.js"></script>
+  <script src="../list.js"></script>
   <script>
 /*global $, test, equal */
-QUnit.test("smoke test", function() {
-  QUnit.assert.equal(1, 1, "Math works!");
+QUnit.test("errors should be hidden on keypress", function() {
+  $('input').trigger('keypress');
+  QUnit.assert.equal($('.has-error').is(':visible'), false);
 });
+
+QUnit.test("errors should not be hidden unless there is a keypress", function(){
+  QUnit.assert.equal($('.has-error').is(':visible'), true);
+});
+
   </script>
 </body>
 </html>
